--- a/inc/scss/base_site.scss
+++ b/inc/scss/base_site.scss
@@ -16,7 +16,7 @@
 html {
 	background: $bodycolor;
 	font-size: 62.5%;
-	-webkit-overflow-scrolling: touch;
+//	-webkit-overflow-scrolling: touch;
 	-webkit-tap-highlight-color: lighten($basecolor, 75%);
 	-webkit-text-size-adjust: 100%;
 	-ms-text-size-adjust: 100%;
